--- a/css/main.css
+++ b/css/main.css
@@ -192,8 +192,8 @@ body {
   padding-left: auto;
   padding-right: auto;
   background-color: #c4c4c4;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/hero.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -881,7 +881,7 @@ body {
 .checkbox:checked + .checkbox__icon {
   background-color: #2196f3;
   border-color: transparent;
-  background-image: url(../../images/checkbox.svg);
+  background-image: url(../images/checkbox.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-origin: border-box;
