--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,7 +7,7 @@
 
   background-color: $hero-bg-color;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero.jpg);
+    url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
